--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:turn="http://schemas.android.com/apk/res/lyd.github.turnloadview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context="lyd.github.turnloadview.MainActivity">
 
 
     <lyd.github.library.TurnLoadView
         android:layout_width="200dp"
-        android:layout_centerInParent="true"
         android:layout_height="200dp"
+        android:layout_centerInParent="true"
         turn:maxRange="300"
         turn:strokeWidth="20"
         turn:turnColorList="#F44336,#9C27B0,#3F51B5,#03A9F4,#00BCD4,#4CAF50,#FFEB3B,#FF9800,#795548,#607D8B" />
 
-</RelativeLayout>
+    <lyd.github.library.TurnLoadView
+        android:id="@+id/tlv_load"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        turn:maxRange="300"
+        turn:strokeWidth="20" />
+
+</LinearLayout>
