--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    
+    <color name="colorBlueGrey">#607D8B</color>
+    <color name="colorBlue">#2196F3</color>
+    <color name="colorTeal">#009688</color>
+    <color name="colorDeepPurple">#673AB7</color>
 </resources>
